--- a/systems/common/kitty/kitty.conf
+++ b/systems/common/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family Fira Code SemiBold Nerd Font Complete
-bold_font        Fira Code Bold Nerd Font Complete
-italic_font      Fira Code SemiBold Nerd Font Complete
-bold_italic_font Fira Code Bold Italic Nerd Font Complete
+font_family IBM Plex Mono SmBld
+bold_font IBM Plex Mono Bold
+italic_font IBM Plex Mono SmBld Italic
+bold_italic_font IBM Plex Mono Bold Italic
 
 shell_integration disabled
 
