update: update sc

--- a/systems/common/hypr/hyprland.conf
+++ b/systems/common/hypr/hyprland.conf
@@ -162,6 +162,7 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # launch at start
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=systemctl --user start xdg-desktop-portal-hyprland
 exec-once=hyprpaper
 exec-once=dunst
 exec-once=waybar
