--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,8 @@ jobs:
       
       - name: "Install Nix ❄️"
         uses: cachix/install-nix-action@v26
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
 
       - name: "Install Cachix ❄️"
         uses: cachix/cachix-action@v14
