--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build-nixos:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps: 
       - name: "Maximize Disk Space"
         uses: easimon/maximize-build-space@v8
