--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build-nixos:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:     
       - uses: actions/checkout@v4
       
