--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,4 +45,4 @@ jobs:
 
       - name: "Build NixOS config ❄️"
         run: |
-          nix build .\#nixosConfigurations."earth".config.system.build.toplevel 
+          nix build .\#nixosConfigurations."earth".config.system.build.toplevel -- --cores=2
