--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -50,6 +50,13 @@ jobs:
         run: |
           git diff --exit-code flake.lock || echo "CHANGED=true" >> $GITHUB_OUTPUT
 
+      - name: Commit changes
+        if: steps.git-check.outputs.CHANGED == 'true'
+        run: |
+          git add flake.lock
+          git commit -m "chore: update flake"
+          git push origin ${{ env.BRANCH_NAME }}
+
       - name: Create Pull Request
         if: steps.git-check.outputs.CHANGED == 'true'
         id: create-pr
