--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -60,7 +60,7 @@ jobs:
           git checkout -b ${{ env.BRANCH_NAME }}
           git add .
           git commit -m "chore: update flake dependencies"
-          git push origin ${{ env.BRANCH_NAME }}
+          git push -u origin ${{ env.BRANCH_NAME }}
 
       - name: Create Pull Request
         if: steps.update-flake.outputs.CHANGED == 'true'
